// $Id$

Feeds 6.x xxxxxxxxxxxxxxxxxxxxxx 
--------------------------------

- #926616 Mark Trapp: FeedsEnclosure::getFile() should allow files to exist in
  the temp directory.
- #912630 twistor: FeedsImportBatch: make items accessible for modification.
- #946822 twistor: FeedsSitemapParser broken: Serialization of
  'SimpleXMLElement' is not allowed.
- #933306 alex_b: Fix Feeds creates subscriptions for not existing importers.

Feeds 6.x 1.0 Beta 9, 2010-09-26
--------------------------------

- #923318 alex_b: Fix "Fatal error: Call to a member function import() on a
  non-object" occuring on cron.

Feeds 6.x 1.0 Beta 8, 2010-09-25
--------------------------------

- #625196 mstrelan, alex_b: Fix array_merge(), array_intersect_key() warnings.
- #831470 infojunkie, alex_b: Fix Import fails due to dates not converted
  correctly.
- #916962 alex_b: Fix undefined feeds_reschedule() when upgrading.
- #919172 andrewlevine, alex_b: Fix enclosure source files deleted.
- Fix emfield mapper not handling single values properly.
- Fix emfield mapper not accepting FeedsElement objects.

Feeds 6.x 1.0 Beta 7, 2010-09-17
--------------------------------

- #914692: Fix calltime pass-by-reference errors.

Feeds 6.x 1.0 Beta 6, 2010-09-16
--------------------------------

- Branched to DRUPAL-6--1.
- #623432 Alex UA, dixon_, pvhee, cglusky, alex_b et al.: Mapper for emfield.
- #913672 andrewlevine: Break out CSV Parser into submethods so it is more
  easily overridable
- #853974 snoldak924, alex_b: Fix XSS vulnerabilities in module.
- #887846 ekes: Make FeedsSimplePieEnclosure (un)serialization safe.
- #908582 XiaN Vizjereij, alex_b: Fix "Cannot use object of type stdClass as
  array" error in mappers/taxonomy.inc.
- #906654 alex_b: Fix phantom subscriptions.
- #867892 alex_b: PubSubHubbub - slow down import frequency of feeds that are
  subscribed to hub.
- #908964 alex_b: Break out scheduler. Note: Features depends on Job Scheduler