@@ -385,8 +385,12 @@ function feeds_nodeapi(&$node, $op, $form) {
         $node_feeds = NULL;
         break;
       case 'delete':
+        $source = feeds_source($importer_id, $node->nid);
+        if ($source->importer->processor->config['delete_with_source']) {
+          feeds_batch_set(t('Deleting'), 'clear', $importer_id, $node->nid);
+        }
         // Remove attached source.
-        feeds_source($importer_id, $node->nid)->delete();
+        $source->delete();
         break;
     }
   }
